--- a/src/styles/Menu.css
+++ b/src/styles/Menu.css
@@ -25,7 +25,7 @@
   border-radius: 15px;
   width: 300px;
   height: 350px;
-  margin: 20px;
+  margin: 10px;
   box-shadow: 0px 3px 15px rgba(0, 0, 0, 0.2);
 }
 .menuItem:hover {
@@ -41,13 +41,19 @@
   height: 200px;
   background-position: center;
   background-repeat: no-repeat;
-  background-size:contain;
+  background-size: contain;
+  border: calc(0.2 * 10vmin) solid white; /* Add dynamic border size */
+  box-sizing: border-box; /* Include the border size in the image width */
+}
+
+.menuItem div image {
+  border: 10px;
 }
 
 .menuItem h1,
 .menuItem p {
   margin-left: 20px;
-}
+} 
 
 @media only screen and (max-width: 1300px) {
   .menuList {
