--- a/src/styles/Menu.css
+++ b/src/styles/Menu.css
@@ -51,8 +51,9 @@
 }
 
 .menuItem h1,
+.menuItem h2,
 .menuItem p {
-  margin-left: 20px;
+  flex: ;
 } 
 
 @media only screen and (max-width: 1300px) {
