--- a/src/styles/Footer.css
+++ b/src/styles/Footer.css
@@ -3,19 +3,26 @@
     height: 200px;
     background-color: #121619;
     display: flex;
-    justify-content: center;
-    align-items: center;
     flex-direction: column;
+    align-items: center;
+    justify-content: center;
     padding-top: 10px;
-  }
-  
-  .socialMedia svg {
-    color: white;
-    margin: 20px;
-    font-size: 70px;
+}
+
+.socialMedia {
+  display: flex;
+  align-items: stretch;
+}
+
+.socialMedia svg {
+    color: white;  
+    margin: 0 20px;  
+    font-size: 70px;  
     cursor: pointer;
-  }
-  
-  .footer p {
+} 
+
+.footer p {
     color: white;
-  }
+    display: flex;
+    justify-content: center;
+}
