--- a/src/styles/Contact.css
+++ b/src/styles/Contact.css
@@ -21,8 +21,8 @@
 }
 
 .contact .contactRight h1 {
-  font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande",
-    "Lucida Sans", Arial, sans-serif;
+  font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande',
+    'Lucida Sans', Arial, sans-serif;
   font-weight: 10;
   font-size: 50px;
   margin-left: 30px;
@@ -53,7 +53,6 @@ form textarea {
   border-bottom: 1px solid #121619;
   color: rgb(0, 0, 0);
   background-color: white;
-
 }
 input::placeholder,
 textarea::placeholder {
