--- a/src/styles/Menu.css
+++ b/src/styles/Menu.css
@@ -50,11 +50,11 @@
   border: 10px;
 }
 
-.menuItem h1,
+/* .menuItem h1,
 .menuItem h2,
 .menuItem p {
   flex: ;
-} 
+} */
 
 @media only screen and (max-width: 1300px) {
   .menuList {
